# img-censorship-module

./: .env.example  .gitignore  ARCHITECTURE.md  PLAN.md  README.md  case.txt  censor_benchmark_datasets.md  pyproject.toml  requirements-benchmark.txt  requirements-ml.txt  requirements.txt  ui_demo.py
censor_guard/: __init__.py  app.py  calibration.py  config.py  decision.py  evaluation.py  fusion.py  observability.py  pipeline.py  schemas.py  taxonomy.py
censor_module/: README.md  requirements.txt
censorship/: __init__.py
config/: models.yaml  policy_bank.yaml  taxonomy.yaml
configs/: local.yaml  pipeline.yaml  policy.yaml
data/: forbidden_prompts_ru.jsonl
docs/: architecture.md  criteria-checklist.md  demo-script.md  evaluation-methodology.md  hackathon-pipeline.md  logging_demo_run.md  model-review.md  model-selection.md  taxonomy.md  threat-model.md  unresolved-risks.md
edge_cases/: README.md
examples/: eval_manifest.example.csv
models/: robust_probe.npz
notebooks/: 00_eda.ipynb  01_demo.ipynb  02_metrics.ipynb  03_module_inspector.ipynb  classifier_evaluation.ipynb  metrics_benchmark.ipynb
reports/: baseline-metrics.md
scripts/: benchmark.py  censor_prompt.sh  download_models.py  download_prompt_model.sh  evaluate_manifest.py  install_local.sh  run_hackathon_flow.sh  run_inference.py  run_local_api.sh  run_logging_demo.py  verify_logging_demo.py
tests/: test_aggregator.py  test_api.py  test_app.py  test_benchmark_metrics.py  test_calibration.py  test_cli.py  test_decision.py  test_decision_fusion.py  test_evaluation.py  test_forbidden_dataset.py  test_fusion.py  test_hackathon_service.py  test_image_embedded_text_detectors.py  test_llava_guard.py  test_llavaguard_parser.py  test_logging_demo_scripts.py  test_observability.py  test_pipeline.py  test_pipeline_audit.py  test_policy.py  test_prompt_keywords.py  (+6 more)
ui/: app.js  (+3 more)
(+101 files in other folders)
