[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "img-censorship-module"
version = "0.1.0"
description = "MLSecOps image censor pipeline with lightweight local safety models."
requires-python = ">=3.9"
dependencies = [
    "accelerate>=0.30",
    "numpy>=1.24",
    "pillow>=10.0",
    "pyyaml>=6.0",
    "requests>=2.31",
    "torch>=2.2",
    "transformers>=4.57",
]

[project.optional-dependencies]
api = ["fastapi>=0.115", "uvicorn>=0.30", "python-multipart>=0.0.9"]
dev = ["pytest>=8.0"]
image-text = ["opencv-python-headless>=4.9", "pytesseract>=0.3"]

[project.scripts]
img-censor = "img_censor.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
