[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "censorship"
version = "1.0.0"
description = "Explainable image content censorship module for bank AI systems"
requires-python = ">=3.11"
dependencies = [
    "torch>=2.2.0",
    "torchvision>=0.17.0",
    "transformers>=4.40.0",
    "accelerate>=0.28.0",
    "Pillow>=10.0.0",
    "numpy>=1.26.0",
    "pydantic>=2.0.0",
    "pyyaml>=6.0",
    "nudenet>=3.4.0",
    "grad-cam>=1.5.0",
    "python-dotenv>=1.0.0",
    "tqdm>=4.66.0",
    "pandas>=2.0.0",
    "scikit-learn>=1.4.0",
    "matplotlib>=3.8.0",
    "seaborn>=0.13.0",
    "huggingface_hub>=0.22.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=5.0.0",
    "jupyter>=1.0.0",
    "ipywidgets>=8.0.0",
]
adversarial = [
    "adversarial-robustness-toolbox>=1.17.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["censorship*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"
